5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1595_2895.log
== TEST (2019-03-21 22:45:05) 
-- CODE:
var = int(input("Quantos jogos: "))
var1 = float(input("Qual o valor do jogo: "))
var3 = float(input("valor do frete: "))

Total = (var * var1 6 var3)
-- ERROR:
File "XXXX", line 5
    Total = (var * var1 6 var3)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:45:22) 
-- CODE:
var = int(input("Quantos jogos: "))
var1 = float(input("Qual o valor do jogo: "))
var3 = float(input("valor do frete: "))

Total = (var * var1 + var3)
print(Total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:45:33) 
-- CODE:
var = int(input("Quantos jogos: "))
var1 = float(input("Qual o valor do jogo: "))
var3 = float(input("valor do frete: "))

Total = (var * var1 + var3)
print(Total)
-- EXECUTION TIME:
0.12733
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
